# cart_collection

./: CMakeLists.txt  README.md  package.xml  setup.py
ros/config/: dynamic_navigation_params.yaml
ros/launch/: cart_collection.launch
ros/scripts/: cart_collection  send_goal.sh
ros/src/cart_collection/: action_states.py  align_and_approach_cart.py  cart_collection_sm.py  cart_collection_states.py  cart_collection_utils.py  cart_redock_sm.py  couple_to_cart.py  get_cart_pose.py  get_cart_setpoint.py  get_setpoint_in_post_dock_area.py  go_to_post_dock_setpoint.py  go_to_predock_setpoint.py  look_for_cart.py
ros/src/cart_drop_off/: cart_drop_off_sm.py  get_pre_undock_setpoint.py  get_setpoint_in_post_undock_area.py  get_undock_setpoint.py  go_to_post_undock_setpoint.py  go_to_pre_undock_setpoint.py  go_to_undock_setpoint.py  uncouple_from_cart.py
