<?xml version="1.0"?>
<package>
  <name>cart_collection</name>
  <version>0.1.0</version>
  <description>State machine for cart collection</description>

  <maintainer email="blumenthal@locomotec.com">Sebastian Blumenthal</maintainer>
  <maintainer email="santosh.thoduka@h-brs.de">Santosh Thoduka</maintainer>
  <maintainer email="w.houtman@tue.nl">Wouter Houtman</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>ropod_ros_msgs</run_depend>

</package>

